- "Move Users" dialog from "Users" -> "Advanced" menu item
- "Check for Update" in "Help" menu
- Ability to "join last joined channel" for each server
- Ability to leave current channel from everywhere in main window
- Use Qt checkable flag in user rights list of "User Accounts" dialog to allow screenreader to see if an item is checked
- Ability to customize some TTS and status bar messages
- Remove option "Announce server name" from TTS options, use customizable messages instead
- Redesign "Sound Events" tab in "Preferences" dialog
- Optional sound event for user typing private message
- Ability to replace existing file on upload
- Menu to insert MOTD variables in "Server Properties" dialog
- Support for Import/Export entire Server List
- Replaced readonly edit fields by labels in "User Info" dialog
- Only show available info in "User info" dialog
- Ability to copy all User Info to clipboard in "User Info" dialog
- Support Idle Time on Linux (X11)
- Ability to sort Ban List
- Context menu to move banned/unbanned users to banned/unbanned list
- Ability to search by IP or username in "Banned Users" dialog
- Ban time displays in local format
- Locale file size now also use in "file transfer" dialog
- Reset label of files list when disconnected from server
- Limit text size in channels tree ignored for screen readers
- Windows and macOS updated to Qt v6.7.1
- Ability to reorder column of User Accounts and Online Users dialog
Android Client
- Toggle channel operator does not show password dialog if user has user-right to change channel operator
iOS Client
-
Server
-

Version 5.16.1, 2024/04/16
Default Qt Client
- Fixed issue where initial sound event was played over and over again

Version 5.16, 2024/04/08
Default Qt Client
- Dates and times are now formatted in user locale on "User accounts" dialog and main window's files tab
- Option to show server's message of the day in a welcome dialog box
- Option to announce server name on some server related TTS events